force-app/main/default/objects/Configurator_Request__c/Configurator_Request__c.object-meta.xml
<CustomObject>
    <label>Configurator Request</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Buy Design Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurator Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>