force-app/main/default/objects/Configurator_Request__c/fields/Closed_by__c.field-meta.xml
<CustomField>
    <fullName>Closed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Configurator_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>