force-app/main/default/objects/Configurator_Request__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <formula>if( isnull(Date_Closed__c),today()- datevalue(Date_Requested__c),Date_Closed__c-datevalue(Date_Requested__c))</formula>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>