force-app/main/default/objects/Configurator_Request__c/fields/Effort_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Effort_Estimate__c</fullName>
    <label>Effort Estimate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Low</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3 - Moderate</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>