force-app/main/default/objects/Configurator_Request__c/fields/Lotus_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Lotus_Ticket_Number__c</fullName>
    <label>Lotus Ticket Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>