force-app/main/default/objects/Configurator_Request__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOM</fullName>
            </value>
            <value>
                <fullName>Material Clarification</fullName>
            </value>
            <value>
                <fullName>Material Output Error</fullName>
            </value>
            <value>
                <fullName>New Feature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>