force-app/main/default/objects/Configurator_Request__c/fields/Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>Problem_Description__c</fullName>
    <label>Problem Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>