force-app/main/default/objects/Configurator_Request__c/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <inlineHelpText>In quarter hours (.0, .25, .75, etc.)</inlineHelpText>
    <label>Time Spent</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>