force-app/main/default/objects/Configurator_Request__c/validationRules/Assigned_To_Required_For_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_To_Required_For_Status</fullName>
    <active>true</active>
    <errorConditionFormula>and( isnull(Assigned_to__c),ischanged( Status__c ),text( Status__c )=&quot;Assigned&quot;)</errorConditionFormula>
    <errorDisplayField>Assigned_to__c</errorDisplayField>
    <errorMessage>Enter the &quot;Assigned To&quot; prior to changing status.</errorMessage>
</ValidationRule>