force-app/main/default/objects/Configurator_Request__c/validationRules/Must_have_Time_Spent_to_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_Time_Spent_to_Close</fullName>
    <active>true</active>
    <errorConditionFormula>or(and(text(Status__c )=&quot;Closed&quot;,isnull( Time_Spent__c )),and(text(Status__c )=&quot;In Review&quot;,isnull( Time_Spent__c )))</errorConditionFormula>
    <errorDisplayField>Time_Spent__c</errorDisplayField>
    <errorMessage>Please enter the time spent to address this ticket.</errorMessage>
</ValidationRule>