force-app/main/default/objects/Configurator_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Problem_Description__c</columns>
    <columns>Buy_Design_Section__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Date_Requested__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>